// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`login footer should render return to in sign up link 1`] = `
<div>
  <span
    class="font-normal leading-normal antialiased text-interface-foreground-default-primary"
  >
    Don't have an account?
     
    <a
      class="text-button-link-brand-brand transition-colors hover:text-button-link-brand-brand-hover underline"
      href="http://localhost:4455/self-service/registration/browser?return_to=https://ory.sh"
    >
      Sign up
    </a>
  </span>
</div>
`;

exports[`login footer should render sign up link 1`] = `
<div>
  <span
    class="font-normal leading-normal antialiased text-interface-foreground-default-primary"
  >
    Don't have an account?
     
    <a
      class="text-button-link-brand-brand transition-colors hover:text-button-link-brand-brand-hover underline"
      href="http://localhost:4455/self-service/registration/browser"
    >
      Sign up
    </a>
  </span>
</div>
`;

exports[`registration footer should render return to in sign in link 1`] = `
<div>
  <span
    class="font-normal leading-normal antialiased"
  >
    Already have an account?
     
    <a
      class="text-button-link-brand-brand transition-colors hover:text-button-link-brand-brand-hover underline"
      href="http://localhost:4455/self-service/login/browser?return_to=https://ory.sh"
    >
      Sign in
    </a>
  </span>
</div>
`;

exports[`registration footer should render sign in link 1`] = `
<div>
  <span
    class="font-normal leading-normal antialiased"
  >
    Already have an account?
     
    <a
      class="text-button-link-brand-brand transition-colors hover:text-button-link-brand-brand-hover underline"
      href="http://localhost:4455/self-service/login/browser"
    >
      Sign in
    </a>
  </span>
</div>
`;
